FIXED: wierd horizontal scroll issue

--- a/src/components/_input.scss
+++ b/src/components/_input.scss
@@ -6,4 +6,5 @@ input {
     color: #9fa3a6;
     width: 90%;
     margin: 5% 5%;
+    font-family: "Roboto Slab", serif;
 }
