--- a/src/components/_menu.scss
+++ b/src/components/_menu.scss
@@ -12,7 +12,6 @@ nav {
                 content: "";
                 display: block;
                 border-bottom: 1px solid $text-gray--light;
-                width: 115%;
                 margin-top: 3%;
             }
         }
